add StatisticsUsers
